# GodotNetworking

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  setup_project.sh
.github/workflows/: build.yml
game/: project.godot
game/Scripts/: gd_network_manager.gd
game/scenes/: main.tscn  movement.gd.uid  player.tscn  top_down_movement.gd  top_down_movement.gd.uid
game/sprites/player/ATTACK 1/: attack1_down.png.import  attack1_left.png.import  attack1_right.png.import  attack1_up.png.import
game/sprites/player/ATTACK 2/: attack2_down.png.import  attack2_left.png.import  attack2_right.png.import  attack2_up.png.import
game/sprites/player/IDLE/: idle_down.png.import  idle_left.png.import  idle_right.png.import  idle_up.png.import
game/sprites/player/RUN/: run_down.png.import  run_left.png.import  run_right.png.import  run_up.png.import
src/: SConstruct
src/.cache/clangd/index/: ___wctype.h.0DA49ED50BD25201.idx  __bit_reference.0B46BFB1B24AFA73.idx  __config.6E969DE66753BDB6.idx  __hash_table.72BD05C9177D9B8F.idx  __locale.DCE8BECCD676AA68.idx  __node_handle.4A600CA1CD74BEBA.idx  __split_buffer.D2C83D4FF88EAFC3.idx  (+2424 more)
src/client/: entt_manager.cpp  entt_manager.h  gn_network_manager.cpp  gn_network_manager.h  register_types.cpp  register_types.h
src/common/: game_types.h
src/network/: SConscript  entt_manager.cpp  entt_manager.h  game_server.cpp  game_server.h  gn_network_manager.cpp  gn_network_manager.h  register_types.cpp
src/server/: main.cpp  server_network.cpp  server_network.h
src/subject/: Lab_1_Linking_Context.md
